updated to 1.2.3. Added MultiObjectUniformBirth. Updated dependencies